docs(JavaBase): 补充 JVM 参数调优内容
- 添加 -XX 参数使用说明和示例
- 解释常用 JVM调优参数
- 讨论 OOM 错误及其原因- 介绍元空间和 Direct Buffer 相关知识